force-app/main/default/objects/Partner_Escalation__c/Partner_Escalation__c.object-meta.xml
<CustomObject>
    <description>Functionality for Partner Managers to trigger an escalation to leadership with the goal of forcing a decision on descoping, restructuring commercials, or changing strategy. We envision this as a lightweight replacement for the current Offboarding cases. As a result, if the decision leads to a contract termination, we will also need to build functionality to alert Finance about the change.</description>
    <label>Partner Escalation</label>
    <nameField>
        <label>Partner Escalation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Escalations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>