force-app/main/default/objects/Partner_Escalation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Escalations</relationshipLabel>
    <relationshipName>Partner_Escalations</relationshipName>
    <type>Lookup</type>
</CustomField>