force-app/main/default/objects/Partner_Escalation__c/fields/AP_Final_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>AP_Final_Payment_Date__c</fullName>
    <label>AP Final Payment Date</label>
    <type>Date</type>
</CustomField>