force-app/main/default/objects/Partner_Escalation__c/fields/AR_Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>AR_Invoice_Status__c</fullName>
    <label>AR Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Outstanding Balance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>