force-app/main/default/objects/Partner_Escalation__c/fields/AR_Total_Outstanding_Balance__c.field-meta.xml
<CustomField>
    <fullName>AR_Total_Outstanding_Balance__c</fullName>
    <label>AR Total Outstanding Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>