force-app/main/default/objects/Partner_Escalation__c/fields/Contract_Terminated_Notify_Finance__c.field-meta.xml
<CustomField>
    <fullName>Contract_Terminated_Notify_Finance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Terminated, Notify Finance</label>
    <type>Checkbox</type>
</CustomField>