force-app/main/default/objects/Partner_Escalation__c/fields/Contract_Termination_Required__c.field-meta.xml
<CustomField>
    <fullName>Contract_Termination_Required__c</fullName>
    <label>Contract Termination Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>