force-app/main/default/objects/Partner_Escalation__c/fields/Effective_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Termination_Date__c</fullName>
    <label>Effective Termination Date</label>
    <type>Date</type>
</CustomField>