force-app/main/default/objects/Partner_Escalation__c/fields/Escalation_Plan__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Plan__c</fullName>
    <description>Provide a step by step plan of how you plan to proceed if this escalation is approved. Include a complete description of what is changing and what the future of the relationship will look like.</description>
    <inlineHelpText>Provide a step by step plan of how you plan to proceed if this escalation is approved. Include a complete description of what is changing and what the future of the relationship will look like.</inlineHelpText>
    <label>Escalation Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>