force-app/main/default/objects/Partner_Escalation__c/fields/Escalation_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Rationale__c</fullName>
    <description>Why have you chosen to escalate this customer?</description>
    <inlineHelpText>Why have you chosen to escalate this customer?</inlineHelpText>
    <label>Escalation Rationale</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>