force-app/main/default/objects/Partner_Escalation__c/fields/Escalation_Status__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Status__c</fullName>
    <label>Escalation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>