force-app/main/default/objects/Partner_Escalation__c/fields/Link_To_MSA__c.field-meta.xml
<CustomField>
    <fullName>Link_To_MSA__c</fullName>
    <label>Link To MSA</label>
    <type>Url</type>
</CustomField>