force-app/main/default/objects/Partner_Escalation__c/fields/Link_To_Termination_Notice__c.field-meta.xml
<CustomField>
    <fullName>Link_To_Termination_Notice__c</fullName>
    <label>Link To Termination Notice</label>
    <type>Url</type>
</CustomField>