force-app/main/default/objects/Partner_Escalation__c/fields/Outcome_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Rationale__c</fullName>
    <description>Why have you chosen this Recommended Outcome? For example if you have chosen Descope why Descope and note Restructure Commercials or Change Strategy</description>
    <inlineHelpText>Why have you chosen this Recommended Outcome? For example if you have chosen Descope why Descope and note Restructure Commercials or Change Strategy</inlineHelpText>
    <label>Outcome Rationale</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>