force-app/main/default/objects/Partner_Escalation__c/fields/Partner_Manager_s_Manager__c.field-meta.xml
<CustomField>
    <fullName>Partner_Manager_s_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Manager&apos;s Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Partner_Escalations</relationshipName>
    <type>Lookup</type>
</CustomField>