force-app/main/default/objects/Partner_Escalation__c/fields/Partnership_Objective__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Objective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partnership Objective</label>
    <referenceTo>Partnership_Objective__c</referenceTo>
    <relationshipLabel>Partner Escalations</relationshipLabel>
    <relationshipName>Partner_Escalations</relationshipName>
    <type>Lookup</type>
</CustomField>