force-app/main/default/objects/Partner_Escalation__c/fields/Recommended_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Outcome__c</fullName>
    <label>Recommended Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Descope</fullName>
            </value>
            <value>
                <fullName>Restructure Commercials</fullName>
            </value>
            <value>
                <fullName>Change Strategy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>