force-app/main/default/objects/Partner_Escalation__c/fields/Requested_Contract_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Contract_Termination_Date__c</fullName>
    <label>Requested Contract Termination Date</label>
    <type>Date</type>
</CustomField>